                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-02-2006 fixed: music wouldnt highlight the correct item when switching the sorting between ascending and descending
 - 12-02-2006 fixed: sometimes more than one song could be highlighted
 - 12-02-2006 fixed: the correct item should be highlighted for the currently playing item
 - 11-02-2006 added: you can now jump directly to the saved playlists locations using the following commands:
		Music: Xbmc.ActivateWindow(MyMusicFiles,$Playlists)
		Video: Xbmc.ActivateWindow(MyVideos,$Playlists) 
 - 11-02-2006 added: videoplayer.playlistlength and videoplayer.playlistposition to info manager to match the musicplayer info items
 - 11-02-2006 added: my files, settings, xlink kai to startup window settings to match xboxmediacenter.xml
 - 10-02-2006 fixed: dvdnav discontinuites wheren't being logged correctly
 - 10-02-2006 fixed: potential bug in sharedsection handling
 - 10-02-2006 fixed: music nav, the error message for a empty database was not shown
 - 10-02-2006 fixed: setting the startup window to music or video starts xmbc in the correct window
 - 09-02-2006 added: display a/v sync in codecinfo during playback in dvdplayer + some new code to prepare for a new syncing system.
 - 09-02-2006 fixed: some dvd's would stutter way more than before after the THX fix (not the major stutter issue). buffers are now only played out if timestamp wraps backwords
 - 09-02-2006 added: IP Address button from the normal virtual keyboard to link to the IP address input dialog.
 - 09-02-2006 changed: Controls that are initially hidden will not be animated using WindowOpen.