@@ -5,6 +5,11 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 12-02-2006 fixed: WindowOpen animations weren't shown.
+ - 12-02-2006 fixed: WindowClose animations sometimes resulted in the window never closing (constantly animating)
+ - 12-02-2006 changed: Spincontrols of type text set and get the value rather than the index with GetValue() and SetValue()
+ - 12-02-2006 fixed: Controls that were hidden would lose their focus.
+ - 12-02-2006 fixed: Video bookmarks window was only shown sporadically.
  - 12-02-2006 fixed: music wouldnt highlight the correct item when switching the sorting between ascending and descending
  - 12-02-2006 fixed: sometimes more than one song could be highlighted
  - 12-02-2006 fixed: the correct item should be highlighted for the currently playing item
